took screen shots of the nav bar logo and the far right icon in order to include them in the project. add then into the nav section and now working on the rest of the scaffold before i do the styling

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
+        <link rel="stylesheet" href="img/components/font-awesome-4.4.0/css/font-awesome.min.css">
         <!-- bower:css -->
         <!-- endbower -->
         <script src="js/vendor/modernizr-2.6.2.min.js"></script>
@@ -26,7 +27,23 @@
         <!-- Add your site or application content here -->
       <div class="siteContainer">
         <div class="mainContent">
-          
+          <header>
+            <nav>
+              <!-- Cado Logo image far left of the nav bar -->
+              <img src="img/logo.png" />
+            <ul>
+              <!-- Left nav bar text -->
+              <li><a href="">overview</a></li>
+              <li><a href="">friends</a></li>
+              <li><a href="">your board</a></li> <!-- green dot to be needs to be on top right corner of text -->
+              <li><a href="">inbox</a></li>
+              <!-- icon nav to be on the right hand side of the nav bar -->
+              <li><i class="fa fa-search"></i></li>
+              <li><i class="fa fa-plus"></i></li>
+              <li><img src="img/iconNavImg.png" /></li>
+            </ul>
+          </nav>
+          </header>
         </div>
       </div>
 
