ran bower install --save bootstrap in order to save as a dependency instead of as a dev dependency. created a new folder specs in order to keep the design specs of the project close at hand. moved the jpg image into the img folder so i may use it as the hero image soon with inline styling. will have to re factor.

--- a/index.html
+++ b/index.html
@@ -44,10 +44,18 @@
             </ul>
           </nav>
           </header>
+          <!-- hero image with carousel -->
+          <div class="heroImage">
+            <h5>Featured set of Pins - 10th December, 2014 </h5>
+            <h1>Monument Decor<h1>
+
+          </div>
         </div>
       </div>
 
 <!-- bower:js -->
+<script src="bower_components/jquery/dist/jquery.js"></script>
+<script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
 <!-- endbower -->
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js"><\/script>')</script>
