--- a/index.html
+++ b/index.html
@@ -2,74 +2,132 @@
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+<!--[if gt IE 8]><!-->
+<html class="no-js">
+<!--<![endif]-->
 
-        <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <title></title>
+  <meta name="description" content="">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <link rel="stylesheet" href="css/normalize.css">
-        <link rel="stylesheet" href="css/main.css">
-        <link rel="stylesheet" href="img/components/font-awesome-4.4.0/css/font-awesome.min.css">
-        <!-- bower:css -->
-        <!-- endbower -->
-        <script src="js/vendor/modernizr-2.6.2.min.js"></script>
-    </head>
-    <body>
-        <!--[if lt IE 7]>
+  <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
+
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="img/components/font-awesome-4.4.0/css/font-awesome.min.css">
+  <!-- bower:css -->
+  <!-- endbower -->
+  <script src="js/vendor/modernizr-2.6.2.min.js"></script>
+</head>
+
+<body>
+  <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
 
-        <!-- Add your site or application content here -->
-      <div class="siteContainer">
-        <div class="mainContent">
-          <header>
-            <nav>
-              <!-- Cado Logo image far left of the nav bar -->
-              <img src="img/logo.png" />
-            <ul>
-              <!-- Left nav bar text -->
-              <li><a href="">overview</a></li>
-              <li><a href="">friends</a></li>
-              <li><a href="">your board</a></li> <!-- green dot to be needs to be on top right corner of text -->
-              <li><a href="">inbox</a></li>
-              <!-- icon nav to be on the right hand side of the nav bar -->
-              <li><i class="fa fa-search"></i></li>
-              <li><i class="fa fa-plus"></i></li>
-              <li><img src="img/iconNavImg.png" /></li>
-            </ul>
-          </nav>
-          </header>
-          <!-- hero image with carousel -->
-          <div class="heroImage">
-            <h5>Featured set of Pins - 10th December, 2014 </h5>
-            <h1>Monument Decor<h1>
-
-          </div>
-        </div>
+  <!-- Add your site or application content here -->
+  <div class="siteContainer">
+    <div class="mainContent">
+      <header>
+        <nav>
+          <!-- Cado Logo image far left of the nav bar -->
+          <img src="img/logo.png" />
+          <ul>
+            <!-- Left nav bar text -->
+            <li><a href="">overview</a></li>
+            <li><a href="">friends</a></li>
+            <li><a href="">your board</a></li>
+            <!-- green dot to be needs to be on top right corner of text -->
+            <li><a href="">inbox</a></li>
+            <!-- icon nav to be on the right hand side of the nav bar -->
+            <li><i class="fa fa-search"></i></li>
+            <li><i class="fa fa-plus"></i></li>
+            <li>
+              <img src="img/iconNavImg.png" />
+            </li>
+          </ul>
+        </nav>
+      </header>
+      <!-- hero image with carousel -->
+      <div class="heroImage">
+        <h5>Featured set of Pins - 10th December, 2014 </h5>
+        <h1>Monument Decor
+          <h1>
       </div>
 
-<!-- bower:js -->
-<script src="bower_components/jquery/dist/jquery.js"></script>
-<script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
-<!-- endbower -->
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-        <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js"><\/script>')</script>
-        <script src="js/plugins.js"></script>
-        <script src="js/main.js"></script>
+      <!-- sidebar content -->
+      <aside>
+        <img src="img/Garrett.jpg" alt="Profile Owner Image" />
+        <h3>Carl von Hoff</h3>
+        <h4>Furniture Designer</h4>
+        <button name="following">
+          <i class="fa fa-plus"></i>
+          <i class="fa fa-user"></i> following
+        </button>
+        <button name="message">
+          <i class="fa fa-comment"></i> message
+        </button>
+        <hr>
+        <!-- number of stories and followers-->
+        <div class="storiesAndFollowers">
+        <ul>
+          <li>
+            <p>874</p>
+            <h5>Stories</h5>
+          </li>
+          <li>
+            <p>10
+              <span class="m">M</span>
+            </p>
+            <h5>Followers</h5>
+          </li>
+        </ul>
+      </div>
+        <hr>
+        <ul class="timeline">
+          <!-- posts timeline: first child (odd children) justify text right, second child (even children) justify text left  -->
+          <li><p>10 minutes ago </br>
+            Pinned <em>Nordic Architechture</em> to his board.</p>
+          </li>
+          <li></li>
+          <li></li>
+          <li></li>
+        </ul>
+      </aside>
+    </div>
+  </div>
 
-        <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
-        <script>
-            (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
-            function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
-            e=o.createElement(i);r=o.getElementsByTagName(i)[0];
-            e.src='//www.google-analytics.com/analytics.js';
-            r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-            ga('create','UA-XXXXX-X');ga('send','pageview');
-        </script>
-    </body>
+  <!-- bower:js -->
+  <script src="bower_components/jquery/dist/jquery.js"></script>
+  <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
+  <!-- endbower -->
+  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+  <script>
+    window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js"><\/script>')
+  </script>
+  <script src="js/plugins.js"></script>
+  <script src="js/main.js"></script>
+
+  <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
+  <script>
+    (function(b, o, i, l, e, r) {
+      b.GoogleAnalyticsObject = l;
+      b[l] || (b[l] =
+        function() {
+          (b[l].q = b[l].q || []).push(arguments)
+        });
+      b[l].l = +new Date;
+      e = o.createElement(i);
+      r = o.getElementsByTagName(i)[0];
+      e.src = '//www.google-analytics.com/analytics.js';
+      r.parentNode.insertBefore(e, r)
+    }(window, document, 'script', 'ga'));
+    ga('create', 'UA-XXXXX-X');
+    ga('send', 'pageview');
+  </script>
+</body>
+
 </html>
