playing with the styling for the hero image in order to get the image to match as much as possible to the specs.

--- a/index.html
+++ b/index.html
@@ -34,9 +34,10 @@
       <header>
         <nav class="headerNav">
           <!-- Cado Logo image far left of the nav bar -->
-            <ul>
+
               <div class="leftNav">
-                <img src="img/logo.png" />
+                <ul>
+                <li><img src="img/logo.png" /></li>
               <!-- Left nav bar text -->
               <li>
                 <a href="#">overview</a>
@@ -51,8 +52,11 @@
               <li>
                 <a href="#">inbox</a>
               </li>
+              <ul>
           </div>
+
           <div class="rightNav">
+            <ul>
             <!-- icon nav to be on the right hand side of the nav bar -->
             <li>
               <i class="fa fa-search"></i>
@@ -63,20 +67,19 @@
             <li>
               <img src="img/iconNavImg.png" />
             </li>
+            </ul>
           </div>
-          </ul>
         </nav>
       </header>
       <!-- hero image with carousel -->
-      <div class="heroImage">
+      <div style="width:100%" class="heroImage">
         <h5>Featured set of Pins - 10th December, 2014 </h5>
-        <h1>Monument Decor
-          <h1>
+        <h1>Monument Decor<h1>
       </div>
 
       <!-- sidebar content -->
       <aside>
-        <img src="img/Garrett.jpg" alt="Profile Owner Image" />
+        <img src="img/Garrett.jpg" alt="Profile Owner Image" class="profileImg"/>
         <h3>Carl von Hoff</h3>
         <h4>Furniture Designer</h4>
         <button name="following">
