got the hero image to show up but realize that i am going to have to resize the image completely in order for the hero image to be the same size as the one in the spec. gave a border radius to the profile image and put background color on the aside. also found out that making the header height of 5em will match the spec a bit better.

--- a/index.html
+++ b/index.html
@@ -31,121 +31,121 @@
 
   <!-- Add your site or application content here -->
   <div class="siteContainer">
-      <header>
-        <nav class="headerNav">
-          <!-- Cado Logo image far left of the nav bar -->
-
-              <div class="leftNav">
-                <ul>
-                <li><img src="img/logo.png" /></li>
-              <!-- Left nav bar text -->
-              <li>
-                <a href="#">overview</a>
-              </li>
-              <li>
-                <a href="#">friends</a>
-              </li>
-              <li>
-                <a href="#">your board</a>
-              </li>
-              <!-- green dot to be needs to be on top right corner of text -->
-              <li>
-                <a href="#">inbox</a>
-              </li>
-              <ul>
-          </div>
-
-          <div class="rightNav">
-            <ul>
-            <!-- icon nav to be on the right hand side of the nav bar -->
+    <header>
+      <nav class="headerNav">
+        <!-- Cado Logo image far left of the nav bar -->
+        <ul>
+        <div class="leftNav">
             <li>
-              <i class="fa fa-search"></i>
+              <img src="img/logo.png" />
+            </li>
+            <!-- Left nav bar text -->
+            <li>
+              <a href="#">overview</a>
             </li>
             <li>
-              <i class="fa fa-plus"></i>
+              <a href="#">friends</a>
             </li>
             <li>
-              <img src="img/iconNavImg.png" />
+              <a href="#">your board</a>
             </li>
-            </ul>
-          </div>
-        </nav>
-      </header>
-      <!-- hero image with carousel -->
-      <div style="width:100%" class="heroImage">
-        <h5>Featured set of Pins - 10th December, 2014 </h5>
-        <h1>Monument Decor<h1>
-      </div>
-
-      <!-- sidebar content -->
-      <aside>
-        <img src="img/Garrett.jpg" alt="Profile Owner Image" class="profileImg"/>
-        <h3>Carl von Hoff</h3>
-        <h4>Furniture Designer</h4>
-        <button name="following">
-          <i class="fa fa-plus"></i>
-          <i class="fa fa-user"></i> following
-        </button>
-        <button name="message">
-          <i class="fa fa-comment"></i> message
-        </button>
-        <hr>
-        <!-- number of stories and followers-->
-        <div class="storiesAndFollowers">
-          <ul>
+            <!-- green dot to be needs to be on top right corner of text -->
             <li>
-              <p>874</p>
-              <h5>Stories</h5>
+              <a href="#">inbox</a>
             </li>
-            <li>
-              <p>10
-                <span class="m">M</span>
-              </p>
-              <h5>Followers</h5>
-            </li>
-          </ul>
         </div>
-        <hr>
-        <ul class="timeline">
-          <!-- posts timeline: first child (odd children) justify text right, second child (even children) justify text left  -->
+
+        <div class="rightNav">
+          <!-- icon nav to be on the right hand side of the nav bar -->
           <li>
-            <p>10 minutes ago </br>
-              Pinned
-              <em>Nordic Architechture</em> to his board.</p>
-            <i class="fa fa-circle"></i>
+            <i class="fa fa-search"></i>
           </li>
           <li>
-            <i class="fa fa-circle"></i>
-            <p>10 minutes ago </br>
-              Updated his
-              <em>profile picture.</em>
+            <i class="fa fa-plus"></i>
+          </li>
+          <li>
+            <img src="img/iconNavImg.png" />
+          </li>
+        </div>
+        </ul>
+      </nav>
+    </header>
+    <!-- hero image with carousel -->
+    <div class="heroImage">
+      <h5>Featured set of Pins - 10th December, 2014 </h5>
+      <h1>Monument Decor
+        <h1>
+    </div>
+
+    <!-- sidebar content -->
+    <aside>
+      <img src="img/Garrett.jpg" alt="Profile Owner Image" class="profileImg" />
+      <h3>Carl von Hoff</h3>
+      <h4>Furniture Designer</h4>
+      <button name="following">
+        <i class="fa fa-plus"></i>
+        <i class="fa fa-user"></i> following
+      </button>
+      <button name="message">
+        <i class="fa fa-comment"></i> message
+      </button>
+      <hr>
+      <!-- number of stories and followers-->
+      <div class="storiesAndFollowers">
+        <ul>
+          <li>
+            <p>874</p>
+            <h5>Stories</h5>
+          </li>
+          <li>
+            <p>10
+              <span class="m">M</span>
             </p>
-          </li>
-          <li>
-            <p>10 minutes ago </br>
-              Pinned
-              <em>Nordic Architechture</em> to his board.</p>
-            <i class="fa fa-circle"></i>
-          </li>
-          <li>
-            <i class="fa fa-circle"></i>
-            <p>10 minutes ago </br>
-              Updated his
-              <em>profile picture.</em>
-            </p>
+            <h5>Followers</h5>
           </li>
         </ul>
-      </aside>
-      <div class="mainContent">
-        <nav class="postsNav">
+      </div>
+      <hr>
+      <ul class="timeline">
+        <!-- posts timeline: first child (odd children) justify text right, second child (even children) justify text left  -->
+        <li>
+          <p>10 minutes ago </br>
+            Pinned
+            <em>Nordic Architechture</em> to his board.</p>
+          <i class="fa fa-circle"></i>
+        </li>
+        <li>
+          <i class="fa fa-circle"></i>
+          <p>10 minutes ago </br>
+            Updated his
+            <em>profile picture.</em>
+          </p>
+        </li>
+        <li>
+          <p>10 minutes ago </br>
+            Pinned
+            <em>Nordic Architechture</em> to his board.</p>
+          <i class="fa fa-circle"></i>
+        </li>
+        <li>
+          <i class="fa fa-circle"></i>
+          <p>10 minutes ago </br>
+            Updated his
+            <em>profile picture.</em>
+          </p>
+        </li>
+      </ul>
+    </aside>
+    <div class="mainContent">
+      <nav class="postsNav">
         <ul>
           <div class="leftNav">
-          <li><a href="#">board</a></li>
-          <li><a href="#">following</a></li>
-          <li><a href="#">guest book</a></li>
-        </div>
-        <div class="rightNav">
-          <li><a href="#">invites<span class="invitedNumber">8</span></li>
+            <li><a href="#">board</a></li>
+            <li><a href="#">following</a></li>
+            <li><a href="#">guest book</a></li>
+          </div>
+          <div class="rightNav">
+            <li><a href="#">invites<span class="invitedNumber">8</span></li>
         </div>
         </ul>
       </nav>
