changed the h4 in the aside to a p tag so the text is not bold. gave the leftNav class margin 15px 0 0 0 and gave the rightNav class margin the same declaration as the leftNav and gave the rightNav class a padding right of 20px. made the header height 5em to better match the specs

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     <aside>
       <img src="img/Garrett.jpg" alt="Profile Owner Image" class="profileImg" />
       <h3>Carl von Hoff</h3>
-      <h4>Furniture Designer</h4>
+      <p>Furniture Designer</p>
       <button name="following">
         <i class="fa fa-plus"></i>
         <i class="fa fa-user"></i> following
@@ -155,6 +155,8 @@
         <figure></figure>
         <section>
       </div>
+      <footer>
+      </footer>
     </div>
 
     <!-- bower:js -->
