--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
               <img src="img/logo.png" />
             </li>
             <!-- Left nav bar text -->
-            <li>
+            <li id="navLines">
               <a href="#">overview</a>
             </li>
             <li>
