gave the leftNav line elements ids and changed the id name to navLinesLeft and corresponding css declaration in order to get the styles correct. playing with the styles of the right nav line icons in order to get them to match the specs. going to merge this feature and create a new feature for the nav bar.

--- a/index.html
+++ b/index.html
@@ -40,17 +40,17 @@
               <img src="img/logo.png" />
             </li>
             <!-- Left nav bar text -->
-            <li id="navLines">
+            <li id="navLinesLeft">
               <a href="#">overview</a>
             </li>
-            <li>
+            <li id="navLinesLeft">
               <a href="#">friends</a>
             </li>
-            <li>
+            <li id="navLinesLeft">
               <a href="#">your board</a>
             </li>
             <!-- green dot to be needs to be on top right corner of text -->
-            <li>
+            <li id="navLinesLeft">
               <a href="#">inbox</a>
             </li>
         </div>
