gave the right nav search icon line id of navLinesRight and gave it a declaration of color white and margin top 10px to match the left side nav lines. gave a declaration to the search icon to give it a background color of grey and padding left and right of 5px and border radius of 50%. going to apply the same id to the other right nav elements

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
         <div class="rightNav">
           <!-- icon nav to be on the right hand side of the nav bar -->
-          <li>
+          <li id="navLinesRight">
             <i class="fa fa-search"></i>
           </li>
           <li>
