got the css declarations for the nav bar text color and the hover text color. aside from the underline on the nav text on hover and the tooltip, i have completed the styling for the nav bar

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
           <li id="navLinesRight">
             <i class="fa fa-search"></i>
           </li>
-          <li>
+          <li id="navLinesRight">
             <i class="fa fa-plus"></i>
           </li>
           <li>
