--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
               <a href="#">your board</a>
             </li>
             <!-- green dot to be needs to be on top right corner of text -->
-            <li id="navLinesLeft">
+            <li id="navLinesLeft" id="inboxPopover">
               <a href="#">inbox</a>
             </li>
         </div>
