tried to add a tooltip with jquery ui but realized it was not what I want for this. added a class to the inbox line element in order to communicate with scipt but going to use a bootstrap for the popover and customize it accordingly

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
               <a href="#">your board</a>
             </li>
             <!-- green dot to be needs to be on top right corner of text -->
-            <li id="navLinesLeft" id="inboxPopover">
+            <li id="navLinesLeft" class="inboxPopover">
               <a href="#">inbox</a>
             </li>
         </div>
