trying to get the popover to work when the inbox nav line is hovered over but it is not working. i keep getting an errror thrown that function is not defined which leads me to believe the page is not reading the jquery but that doesnt seem to be the case. i added the data attributes to the anchor tag hoping that would work but it doesnt seem to be. going to stop bull dogging and switch to something else.

--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
               <a href="#">your board</a>
             </li>
             <!-- green dot to be needs to be on top right corner of text -->
-            <li id="navLinesLeft" class="inboxPopover">
-              <a href="#">inbox</a>
+            <li id="navLinesLeft">
+              <a href="#" class="inboxPopover" data-toggle="popover" data-placement="bottom" data-trigger="hover">inbox</a>
             </li>
         </div>
 
@@ -159,6 +159,11 @@
       </footer>
     </div>
 
+<!-- <script>
+$(function(){
+  $("[data-toggle='popover']").popover()
+});
+</script> -->
     <!-- bower:js -->
     <script src="bower_components/jquery/dist/jquery.js"></script>
     <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
