removed the data attributes from the inbox anchor tag in the nav bar but kept the class name for the inbox popover

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             </li>
             <!-- green dot to be needs to be on top right corner of text -->
             <li id="navLinesLeft">
-              <a href="#" class="inboxPopover" data-toggle="popover" data-placement="bottom" data-trigger="hover">inbox</a>
+              <a href="#" class="inboxPopover">inbox</a>
             </li>
         </div>
 
