changed the h5 tags in for the stories and followers class to p tags and gave the ul margin-top 0 and margin-right 2em and kept the margin-bottom and margin-left on the default auto

--- a/index.html
+++ b/index.html
@@ -95,13 +95,13 @@
         <ul>
           <li>
             <p>874</p>
-            <h5>Stories</h5>
+            <p>Stories</p>
           </li>
           <li>
             <p>10
               <span class="m">M</span>
             </p>
-            <h5>Followers</h5>
+            <p>Followers</p>
           </li>
         </ul>
       </div>
