--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
       <img src="img/Garrett.jpg" alt="Profile Owner Image" class="profileImg" />
       <h3>Carl von Hoff</h3>
       <p>Furniture Designer</p>
+      <div class="buttonsFollowMessage">
       <button name="following">
         <i class="fa fa-plus"></i>
         <i class="fa fa-user"></i> following
@@ -89,6 +90,7 @@
       <button name="message">
         <i class="fa fa-comment"></i> message
       </button>
+    </div>
       <hr>
       <!-- number of stories and followers-->
       <div class="storiesAndFollowers">
@@ -121,7 +123,7 @@
             <em>profile picture.</em>
           </p>
         </li>
-        <li>
+        <!-- <li>
           <p>10 minutes ago </br>
             Pinned
             <em>Nordic Architechture</em> to his board.</p>
@@ -133,7 +135,7 @@
             Updated his
             <em>profile picture.</em>
           </p>
-        </li>
+        </li> -->
       </ul>
     </aside>
     <div class="mainContent">
@@ -156,7 +158,7 @@
         <section>
       </div>
       <footer>
-        
+
       </footer>
     </div>
 
