--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
 
     <!-- sidebar content -->
     <aside>
+      <div class="asideContent">
       <img src="img/Garrett.jpg" alt="Profile Owner Image" class="profileImg" />
       <h3>Carl von Hoff</h3>
       <p>Furniture Designer</p>
@@ -117,7 +118,7 @@
           <i class="fa fa-circle"></i>
         </li>
         <li>
-          <i class="fa fa-circle"></i>
+          <i class="fa fa-circle secondCircle"></i>
           <p>10 minutes ago </br>
             Updated his
             <em>profile picture.</em>
@@ -137,6 +138,7 @@
           </p>
         </li> -->
       </ul>
+    </div>
     </aside>
     <div class="mainContent">
       <nav class="postsNav">
