cropped the images for the hero but it looks scrunched so thought it would be good to crop off the top of the image. playing with the css for the main content section adding an article around the figure and within the section tags

--- a/index.html
+++ b/index.html
@@ -72,9 +72,10 @@
     </header>
     <!-- hero image with carousel -->
     <div class="heroImage">
-      <h5>Featured set of Pins - 10th December, 2014 </h5>
-      <h1>Monument Decor
-        <h1>
+      <div class="heroText">
+      <p>Featured set of Pins - 10th December, 2014 </p>
+      <h1>Monument Decor<h1>
+      </div>
     </div>
 
     <!-- sidebar content -->
@@ -124,19 +125,6 @@
             <em>profile picture.</em>
           </p>
         </li>
-        <!-- <li>
-          <p>10 minutes ago </br>
-            Pinned
-            <em>Nordic Architechture</em> to his board.</p>
-          <i class="fa fa-circle"></i>
-        </li>
-        <li>
-          <i class="fa fa-circle"></i>
-          <p>10 minutes ago </br>
-            Updated his
-            <em>profile picture.</em>
-          </p>
-        </li> -->
       </ul>
     </div>
     </aside>
@@ -144,20 +132,22 @@
       <nav class="postsNav">
         <ul>
           <div class="leftNav">
-            <li><a href="#">board</a></li>
-            <li><a href="#">following</a></li>
-            <li><a href="#">guest book</a></li>
+            <li id="navLinesLeft"><a href="#">board</a></li>
+            <li id="navLinesLeft"><a href="#">following</a></li>
+            <li id="navLinesLeft"><a href="#">guest book</a></li>
           </div>
-          <div class="rightNav">
-            <li><a href="#">invites<span class="invitedNumber">8</span></li>
+          <div class="rightNavMainContent">
+            <li>invites<span class="invitedNumber">8</span></li>
         </div>
         </ul>
       </nav>
-      <section>
-        <figure></figure>
-        <figure></figure>
-        <figure></figure>
-        <section>
+      <section class="dashboardPosts">
+        <article>
+        <figure><img src="http://lorempixel.com/400/200" /></figure>
+      </article>
+        <!-- <figure><img src="http://lorempixel.com/400/200" /></figure>
+        <figure><img src="http://lorempixel.com/400/200" /></figure> -->
+      </section>
       </div>
       <footer>
 
