styled the three top images for the dashboard section but the last image is not as tall as the spec shows. probably have a lot of re-factoring to do but what to get the text overlaying each image along with the pin it and heart icons

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
   <!-- Add your site or application content here -->
   <div class="siteContainer">
-    <header>
+
       <nav class="headerNav">
         <!-- Cado Logo image far left of the nav bar -->
         <ul>
@@ -69,14 +69,14 @@
         </div>
         </ul>
       </nav>
-    </header>
+
     <!-- hero image with carousel -->
-    <div class="heroImage">
+    <header class="heroImage">
       <div class="heroText">
       <p>Featured set of Pins - 10th December, 2014 </p>
       <h1>Monument Decor<h1>
       </div>
-    </div>
+  </header>
 
     <!-- sidebar content -->
     <aside>
@@ -141,13 +141,14 @@
         </div>
         </ul>
       </nav>
-      <section class="dashboardPosts">
-        <article>
+      <div class="dashboardPosts">
+        <div class="postsContainer">
         <figure><img src="http://lorempixel.com/400/200" /></figure>
-      </article>
-        <!-- <figure><img src="http://lorempixel.com/400/200" /></figure>
-        <figure><img src="http://lorempixel.com/400/200" /></figure> -->
-      </section>
+
+        <figure><img src="http://lorempixel.com/400/200" /></figure>
+        <figure><img src="http://lorempixel.com/400/200" /></figure>
+      </div>
+    </div>
       </div>
       <footer>
 
