got the carot with the same color as th grey on the postscontainer dashboard. changed the color of the invites line element to grey and got the rounded background color of the red-orange color. got the images on the dash within figure classes and added figcaptions and gave the text a font weight of 100 and kept the text the same.

--- a/index.html
+++ b/index.html
@@ -32,27 +32,27 @@
   <!-- Add your site or application content here -->
   <div class="siteContainer">
 
-      <nav class="headerNav">
-        <!-- Cado Logo image far left of the nav bar -->
-        <ul>
+    <nav class="headerNav">
+      <!-- Cado Logo image far left of the nav bar -->
+      <ul>
         <div class="leftNav">
-            <li>
-              <img src="img/logo.png" />
-            </li>
-            <!-- Left nav bar text -->
-            <li id="navLinesLeft">
-              <a href="#">overview</a>
-            </li>
-            <li id="navLinesLeft">
-              <a href="#">friends</a>
-            </li>
-            <li id="navLinesLeft">
-              <a href="#">your board</a>
-            </li>
-            <!-- green dot to be needs to be on top right corner of text -->
-            <li id="navLinesLeft">
-              <a href="#" class="inboxPopover">inbox</a>
-            </li>
+          <li>
+            <img src="img/logo.png" />
+          </li>
+          <!-- Left nav bar text -->
+          <li id="navLinesLeft">
+            <a href="#">overview</a>
+          </li>
+          <li id="navLinesLeft">
+            <a href="#">friends</a>
+          </li>
+          <li id="navLinesLeft">
+            <a href="#">your board</a>
+          </li>
+          <!-- green dot to be needs to be on top right corner of text -->
+          <li id="navLinesLeft">
+            <a href="#" class="inboxPopover">inbox</a>
+          </li>
         </div>
 
         <div class="rightNav">
@@ -67,66 +67,67 @@
             <img src="img/iconNavImg.png" />
           </li>
         </div>
-        </ul>
-      </nav>
+      </ul>
+    </nav>
 
     <!-- hero image with carousel -->
     <header class="heroImage">
       <div class="heroText">
-      <p>Featured set of Pins - 10th December, 2014 </p>
-      <h1>Monument Decor<h1>
+        <p>Featured set of Pins - 10th December, 2014 </p>
+        <h1>Monument Decor
+          <h1>
       </div>
-  </header>
+    </header>
 
     <!-- sidebar content -->
     <aside>
       <div class="asideContent">
-      <img src="img/Garrett.jpg" alt="Profile Owner Image" class="profileImg" />
-      <h3>Carl von Hoff</h3>
-      <p>Furniture Designer</p>
-      <div class="buttonsFollowMessage">
-      <button name="following">
-        <i class="fa fa-plus"></i>
-        <i class="fa fa-user"></i> following
-      </button>
-      <button name="message">
-        <i class="fa fa-comment"></i> message
-      </button>
-    </div>
-      <hr>
-      <!-- number of stories and followers-->
-      <div class="storiesAndFollowers">
-        <ul>
+        <img src="img/Garrett.jpg" alt="Profile Owner Image" class="profileImg" />
+        <h3>Carl von Hoff</h3>
+        <p>Furniture Designer</p>
+        <div class="buttonsFollowMessage">
+          <button name="following">
+            <i class="fa fa-plus"></i>
+            <i class="fa fa-user"></i> following
+          </button>
+          <button name="message">
+            <i class="fa fa-comment"></i> message
+          </button>
+        </div>
+        <hr>
+        <!-- number of stories and followers-->
+        <div class="storiesAndFollowers">
+          <ul>
+            <li>
+              <p>874</p>
+              <p>Stories</p>
+            </li>
+            <li>
+              <p>10
+                <span class="m">M</span>
+              </p>
+              <p>Followers</p>
+            </li>
+          </ul>
+        </div>
+        <hr>
+        <ul class="timeline">
+          <!-- posts timeline: first child (odd children) justify text right, second child (even children) justify text left  -->
           <li>
-            <p>874</p>
-            <p>Stories</p>
+            <p>10 minutes ago </br>
+              Pinned
+              <em>Nordic Architechture</em> to his board.</p>
+            <i class="fa fa-circle"></i>
           </li>
           <li>
-            <p>10
-              <span class="m">M</span>
+            <i class="fa fa-circle secondCircle"></i>
+            <p>10 minutes ago </br>
+              Updated his
+              <em>profile picture.</em>
             </p>
-            <p>Followers</p>
           </li>
         </ul>
       </div>
-      <hr>
-      <ul class="timeline">
-        <!-- posts timeline: first child (odd children) justify text right, second child (even children) justify text left  -->
-        <li>
-          <p>10 minutes ago </br>
-            Pinned
-            <em>Nordic Architechture</em> to his board.</p>
-          <i class="fa fa-circle"></i>
-        </li>
-        <li>
-          <i class="fa fa-circle secondCircle"></i>
-          <p>10 minutes ago </br>
-            Updated his
-            <em>profile picture.</em>
-          </p>
-        </li>
-      </ul>
-    </div>
     </aside>
     <div class="mainContent">
       <nav class="postsNav">
@@ -137,57 +138,75 @@
             <li id="navLinesLeft"><a href="#">guest book</a></li>
           </div>
           <div class="rightNavMainContent">
-            <li>invites<span class="invitedNumber">8</span></li>
-        </div>
+            <li>invites
+              <span class="invitedNumber">8</span>
+            </li>
+          </div>
         </ul>
       </nav>
       <div class="dashboardPosts">
+        <i class="fa fa-sort-asc fa-3x"></i>
         <div class="postsContainer">
-        <figure><img src="http://lorempixel.com/400/200" /></figure>
+          <figure>
+            <a href="">
+              <img src="http://lorempixel.com/400/200" />
+            </a>
+            <figcaption>Outdoor</figcaption>
+          </figure>
 
-        <figure><img src="http://lorempixel.com/400/200" /></figure>
-        <figure><img src="http://lorempixel.com/400/200" /></figure>
+          <figure>
+            <a href="">
+              <img src="http://lorempixel.com/400/200" />
+            </a>
+            <figcaption>Outdoor</figcaption>
+          </figure>
+          <figure>
+            <a href="">
+              <img src="http://lorempixel.com/400/200" />
+            </a>
+            <figcaption>Outdoor</figcaption>
+          </figure>
+        </div>
       </div>
     </div>
-      </div>
-      <footer>
+    <footer>
 
-      </footer>
-    </div>
+    </footer>
+  </div>
 
-<!-- <script>
+  <!-- <script>
 $(function(){
   $("[data-toggle='popover']").popover()
 });
 </script> -->
-    <!-- bower:js -->
-    <script src="bower_components/jquery/dist/jquery.js"></script>
-    <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
-    <!-- endbower -->
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-    <script>
-      window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js"><\/script>')
-    </script>
-    <script src="js/plugins.js"></script>
-    <script src="js/main.js"></script>
+  <!-- bower:js -->
+  <script src="bower_components/jquery/dist/jquery.js"></script>
+  <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
+  <!-- endbower -->
+  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+  <script>
+    window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js"><\/script>')
+  </script>
+  <script src="js/plugins.js"></script>
+  <script src="js/main.js"></script>
 
-    <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
-    <script>
-      (function(b, o, i, l, e, r) {
-        b.GoogleAnalyticsObject = l;
-        b[l] || (b[l] =
-          function() {
-            (b[l].q = b[l].q || []).push(arguments)
-          });
-        b[l].l = +new Date;
-        e = o.createElement(i);
-        r = o.getElementsByTagName(i)[0];
-        e.src = '//www.google-analytics.com/analytics.js';
-        r.parentNode.insertBefore(e, r)
-      }(window, document, 'script', 'ga'));
-      ga('create', 'UA-XXXXX-X');
-      ga('send', 'pageview');
-    </script>
+  <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
+  <script>
+    (function(b, o, i, l, e, r) {
+      b.GoogleAnalyticsObject = l;
+      b[l] || (b[l] =
+        function() {
+          (b[l].q = b[l].q || []).push(arguments)
+        });
+      b[l].l = +new Date;
+      e = o.createElement(i);
+      r = o.getElementsByTagName(i)[0];
+      e.src = '//www.google-analytics.com/analytics.js';
+      r.parentNode.insertBefore(e, r)
+    }(window, document, 'script', 'ga'));
+    ga('create', 'UA-XXXXX-X');
+    ga('send', 'pageview');
+  </script>
 </body>
 
 </html>
