--- a/index.html
+++ b/index.html
@@ -16,11 +16,12 @@
   <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
   <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/main.css">
+
   <link rel="stylesheet" href="img/components/font-awesome-4.4.0/css/font-awesome.min.css">
   <!-- bower:css -->
   <link href="bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
   <!-- endbower -->
+  <link rel="stylesheet" href="css/main.css">
   <script src="js/vendor/modernizr-2.6.2.min.js"></script>
 </head>
 
@@ -51,7 +52,7 @@
           </li>
           <!-- green dot to be needs to be on top right corner of text -->
           <li id="navLinesLeft">
-            <a href="#" class="inboxPopover">inbox</a>
+            <a href="#"  data-container="body" data-toggle="popover" data-placement="bottom" data-trigger="hover" data-html="true" >inbox</a>
           </li>
         </div>
 
@@ -170,28 +171,26 @@
       </div>
     </div>
     <footer>
-
     </footer>
   </div>
+    <!-- Template for the popover on the inbox line element -->
+    <div id="popoverTemplate" class="hide">
+      <p>this is the popover template</p>
+    </div>
 
-  <!-- <script>
-$(function(){
-  $("[data-toggle='popover']").popover()
-});
-</script> -->
   <!-- bower:js -->
   <script src="bower_components/jquery/dist/jquery.js"></script>
   <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
   <!-- endbower -->
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-  <script>
+   <script>
     window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js"><\/script>')
   </script>
   <script src="js/plugins.js"></script>
   <script src="js/main.js"></script>
 
   <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
-  <script>
+  <!-- <script>
     (function(b, o, i, l, e, r) {
       b.GoogleAnalyticsObject = l;
       b[l] || (b[l] =
@@ -206,7 +205,7 @@ $(function(){
     }(window, document, 'script', 'ga'));
     ga('create', 'UA-XXXXX-X');
     ga('send', 'pageview');
-  </script>
+  </script> -->
 </body>
 
 </html>
